<resources>
    <string name="app_name">StudentGradeProject</string>

    <string name="student_name_text_view"></string>
    <string name="student_grade_average_text_view"></string>
    <string name="next_student_button">Next Student</string>
    <string name="prev_student_button">Prev Student</string>
    <string name="student_grade_average_button">DISPLAY STUDENT GRADE AVERAGE</string>
</resources>