<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/student_name_text_view"
        android:layout_width="164dp"
        android:layout_height="29dp"
        android:text="@string/student_name_text_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <TextView
        android:id="@+id/student_grade_average_text_view"
        android:layout_width="166dp"
        android:layout_height="28dp"
        android:layout_marginTop="28dp"
        android:text="@string/student_grade_average_text_view"
        app:layout_constraintEnd_toEndOf="@+id/student_name_text_view"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/student_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/student_name_text_view" />

    <LinearLayout
        android:layout_width="333dp"
        android:layout_height="61dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/student_grade_average_button"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/student_grade_average_text_view"
        app:layout_constraintTop_toBottomOf="@+id/student_grade_average_button">

        <Button
            android:id="@+id/prev_student_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prev_student_button" />

        <Button
            android:id="@+id/next_student_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next_student_button" />
    </LinearLayout>

    <Button
        android:id="@+id/student_grade_average_button"
        android:layout_width="185dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/student_grade_average_button"
        app:layout_constraintEnd_toEndOf="@+id/student_grade_average_text_view"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="@+id/student_grade_average_text_view"
        app:layout_constraintTop_toBottomOf="@+id/student_grade_average_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>